added navigation to blog

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-postsApiKey = "d4e2b9aac1msh56cc676aef23befp1c72dfjsnc28a6b36a350";
-jobsApiKey = "b9866df9252fa5ee21daa43fee05810f"
+POSTS_API_KEY = "d4e2b9aac1msh56cc676aef23befp1c72dfjsnc28a6b36a350";
+JONS_API_KEY = "b9866df9252fa5ee21daa43fee05810f"
